--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Profile"
-    />
+    <meta name="description" content="Osamu Ishiyamaのプロフィールページです" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
+    <!-- OGP tags -->
+    <meta property="og:title" content="Osamu Ishiyama's page" />
+    <meta property="og:description" content="Osamu Ishiyamaのプロフィールページです" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp.webp" />
+    <meta property="og:url" content="https://ishige99.github.io/pages/" />
+    <meta property="og:type" content="website" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
