ogp画像が表示されるようにしました

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- OGP tags -->
     <meta property="og:title" content="Osamu Ishiyama's page" />
     <meta property="og:description" content="Osamu Ishiyamaのプロフィールページです" />
-    <meta property="og:image" content="%PUBLIC_URL%/ogp.webp" />
+    <meta property="og:image" content="https://ishige99.github.io/pages/ogp.webp" />
     <meta property="og:url" content="https://ishige99.github.io/pages/" />
     <meta property="og:type" content="website" />
 
